[gd_scene load_steps=9 format=2]

[ext_resource path="res://overlay_resources/main_menu.gd" type="Script" id=1]
[ext_resource path="res://icons/move.svg" type="Texture" id=2]
[ext_resource path="res://icons/list.svg" type="Texture" id=3]
[ext_resource path="res://icons/close.svg" type="Texture" id=4]
[ext_resource path="res://icons/add.svg" type="Texture" id=5]
[ext_resource path="res://ui/ListOverlayItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://styles/menu.theme" type="Theme" id=7]
[ext_resource path="res://ui/AddMenu.tscn" type="PackedScene" id=8]

[node name="MainOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 2040.0
margin_bottom = 2040.0
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer/VSplitContainer"]
margin_right = 2032.0
margin_bottom = 1841.0
size_flags_vertical = 3

[node name="Overlays" type="VBoxContainer" parent="MarginContainer/VSplitContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListOverlayItem" parent="MarginContainer/VSplitContainer/Control/Overlays" instance=ExtResource( 6 )]
margin_top = 1618.0
margin_right = 2032.0
margin_bottom = 1841.0
overlay_name = "MainOverlay"

[node name="AddMenu" parent="MarginContainer/VSplitContainer/Control" instance=ExtResource( 8 )]
visible = false

[node name="MainBar" type="HBoxContainer" parent="MarginContainer/VSplitContainer"]
margin_top = 1841.0
margin_right = 2032.0
margin_bottom = 2032.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowOverlays" type="Button" parent="MarginContainer/VSplitContainer/MainBar"]
margin_right = 176.0
margin_bottom = 191.0
focus_mode = 0
toggle_mode = true
icon = ExtResource( 3 )

[node name="AddOverlay" type="Button" parent="MarginContainer/VSplitContainer/MainBar"]
margin_left = 180.0
margin_right = 356.0
margin_bottom = 191.0
focus_mode = 0
toggle_mode = true
icon = ExtResource( 5 )

[node name="GrabMode" type="Button" parent="MarginContainer/VSplitContainer/MainBar"]
margin_left = 360.0
margin_right = 536.0
margin_bottom = 191.0
focus_mode = 0
toggle_mode = true
icon = ExtResource( 2 )

[node name="QuitToggle" type="Button" parent="MarginContainer/VSplitContainer/MainBar"]
margin_left = 540.0
margin_right = 716.0
margin_bottom = 191.0
toggle_mode = true
icon = ExtResource( 4 )

[node name="Quit" type="Button" parent="MarginContainer/VSplitContainer/MainBar/QuitToggle"]
visible = false
margin_left = -4.0
margin_top = -199.0
margin_right = 915.0
margin_bottom = -8.0
text = "Really quit?"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="add_menu_closed" from="MarginContainer/VSplitContainer/Control/AddMenu" to="." method="_on_add_menu_closed"]
[connection signal="toggled" from="MarginContainer/VSplitContainer/MainBar/ShowOverlays" to="." method="_on_ShowOverlays_toggled"]
[connection signal="toggled" from="MarginContainer/VSplitContainer/MainBar/AddOverlay" to="." method="_on_AddOverlay_toggled"]
[connection signal="toggled" from="MarginContainer/VSplitContainer/MainBar/GrabMode" to="." method="_on_GrabMode_toggled"]
[connection signal="toggled" from="MarginContainer/VSplitContainer/MainBar/QuitToggle" to="." method="_on_QuitToggle_toggled"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/MainBar/QuitToggle/Quit" to="." method="_on_Quit_pressed"]
